# hero

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json
.entire/: settings.json
03/0483415419/: metadata.json
05/224f9706ca/: metadata.json
08/c0e5db23df/: metadata.json
14/e56565e886/: metadata.json
1a/281569b859/: metadata.json
1a/b66688451c/: metadata.json
20/208f4b1baf/: metadata.json
23/c6dd030dc3/: metadata.json
25/e3cb0aa01e/: metadata.json
25/f3ea46bc9d/: metadata.json
27/982720b688/: metadata.json
2c/cc21d621c9/: metadata.json
34/6ab4f6988a/: metadata.json
36/24d20463d6/: metadata.json
3e/57f33479bb/: metadata.json
3e/ab0fac2271/: metadata.json
44/51e4c19172/: metadata.json
48/84affd105a/: metadata.json
4a/2f39df8b3a/: metadata.json
4c/072b60fe91/: metadata.json
4f/76424bc18b/: metadata.json
53/69d1a616ed/: metadata.json
58/5faec377bb/: metadata.json
5f/b42f6240d2/: metadata.json
66/671a85a230/: metadata.json
73/598f3e1d4e/: metadata.json
74/39726e937c/: metadata.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  semantic_review.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/checkpoint/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/delta/: events.rs  gates.rs  mod.rs  orchestrator.rs  planner.rs
src-tauri/src/git/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/trail/: mod.rs
src-tauri/src/watcher/: mod.rs
src/lib/: ipc.ts  (+1 more)
(+509 files in other folders)
