[package]
name = "entire-desktop"
version = "0.1.0"
description = "Entire Desktop — AI development session manager"
authors = ["Entire"]
edition = "2021"

[lib]
name = "entire_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
git2 = "0.20"
notify = "7"
notify-debouncer-mini = "0.5"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# macOS native API for window corner rounding
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSThread", "NSDate"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow"] }
raw-window-handle = "0.6"

# PTY terminal backend
portable-pty = "0.8"
base64 = "0.22"
